js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A4_T1.js
if
(
!
(
Error
.
hasOwnProperty
(
'
prototype
'
)
)
)
{
throw
new
Test262Error
(
'
#
1
:
Error
.
hasOwnProperty
(
\
'
prototype
\
'
)
return
true
.
Actual
:
'
+
Error
.
hasOwnProperty
(
'
prototype
'
)
)
;
}
reportCompare
(
0
0
)
;
